Added Internal Dependencies to sub-pom's
Added Dependencies to required internal Projects
Configured JPA to auto-generate Static Metamodels

--- a/Bildverwaltung/bildverwaltung.container.impl/pom.xml
+++ b/Bildverwaltung/bildverwaltung.container.impl/pom.xml
@@ -7,4 +7,11 @@
   </parent>
   <artifactId>bildverwaltung.container.impl</artifactId>
   <name>Container Impl</name>
+  <dependencies>
+  	<dependency>
+  		<groupId>prog3.torvald</groupId>
+  		<artifactId>bildverwaltung.container.api</artifactId>
+  		<version>${project.version}</version>
+  	</dependency>
+  </dependencies>
 </project>
