--- a/Bildverwaltung/bildverwaltung.dao.impl/pom.xml
+++ b/Bildverwaltung/bildverwaltung.dao.impl/pom.xml
@@ -7,4 +7,16 @@
   </parent>
   <artifactId>bildverwaltung.dao.impl</artifactId>
   <name>Dao Impl</name>
+  <dependencies>
+  	<dependency>
+  		<groupId>prog3.torvald</groupId>
+  		<artifactId>bildverwaltung.domainmodell</artifactId>
+  		<version>${project.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>prog3.torvald</groupId>
+  		<artifactId>bildverwaltung.dao.api</artifactId>
+  		<version>${project.version}</version>
+  	</dependency>
+  </dependencies>
 </project>
