--- a/Bildverwaltung/pom.xml
+++ b/Bildverwaltung/pom.xml
@@ -62,5 +62,11 @@
 			<artifactId>logback-core</artifactId>
 			<version>1.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
