--- a/Bildverwaltung/pom.xml
+++ b/Bildverwaltung/pom.xml
@@ -22,6 +22,7 @@
 	</build>
 	<modules>
 		<module>bildverwaltung.domainmodell</module>
+		<module>bildverwaltung.db-data</module>
 		<module>bildverwaltung.dao.api</module>
 		<module>bildverwaltung.dao.impl</module>
 		<module>bildverwaltung.service.api</module>
@@ -60,7 +61,17 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.1.3</version>
+			<version>1.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
 		</dependency>
 	</dependencies>
 </project>
