Fixed error with metamodel generation
Fixed an error where Static Metomodels where only created, if the
domainmodel was build separately

--- a/Bildverwaltung/bildverwaltung.domainmodell/pom.xml
+++ b/Bildverwaltung/bildverwaltung.domainmodell/pom.xml
@@ -28,7 +28,9 @@
 								<processor>org.eclipse.persistence.internal.jpa.modelgen.CanonicalModelProcessor</processor>
 							</processors>
 							<outputDirectory>${project.build.directory}/generated-sources/jpametamodel</outputDirectory>
-							<compilerArguments>-Aeclipselink.persistencexml=src/main/resources/META-INF/persistence.xml</compilerArguments>
+							<options>
+								<eclipselink.persistencexml>${project.build.resources[0].directory}/META-INF/persistence.xml</eclipselink.persistencexml>
+							</options>
 						</configuration>
 					</execution>
 				</executions>
