Added ini parse components and reworked container init to use it
Added Method to read and represent init file
Reworked ContainerFactoryIniGenerator to generate init files
Reworked ContainerLoader to use new ini files

--- a/Bildverwaltung/bildverwaltung.container.impl/src/main/resources/META-INF/container.ini
+++ b/Bildverwaltung/bildverwaltung.container.impl/src/main/resources/META-INF/container.ini
@@ -1,1 +1,2 @@
-managedContainerImplClass=bildverwaltung.container.ManagedContainerImpl
+[config]
+class=bildverwaltung.container.ManagedContainerImpl
