--- a/Bildverwaltung/bildverwaltung.container.api/pom.xml
+++ b/Bildverwaltung/bildverwaltung.container.api/pom.xml
@@ -7,4 +7,11 @@
   </parent>
   <artifactId>bildverwaltung.container.api</artifactId>
   <name>Container API</name>
+  <dependencies>
+  	<dependency>
+  		<groupId>prog3.torvald</groupId>
+  		<artifactId>bildverwaltung.domainmodell</artifactId>
+  		<version>${project.version}</version>
+  	</dependency>
+  </dependencies>
 </project>
