Performed gui refactoring
Added RebuildebleSubComponent
Re-implemented master view using RebuildebleSubComponent
Added resource Strings
Added File menu, to match default look-and-feel
The ViewArea is now populated from the database on startup
The AttributeArea is now populated, once the user clicks on a picture in
the viewArea
The AlbumArea is now populated from the database
The SearchArea shows now a fully flagged search interface, that produces
DataFilters to be processed by AlbumFacade

Removed the following sub functionalities:
Removed Help menu, because it was empty
Removed move album/picture, because that functionality makes no sense

--- a/Bildverwaltung/bildverwaltung.gui.fx/pom.xml
+++ b/Bildverwaltung/bildverwaltung.gui.fx/pom.xml
@@ -18,5 +18,22 @@
   		<artifactId>bildverwaltung.facade.api</artifactId>
   		<version>${project.version}</version>
   	</dependency>
+  	<dependency>
+  		<groupId>prog3.torvald</groupId>
+  		<artifactId>bildverwaltung.container.api</artifactId>
+  		<version>${project.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>prog3.torvald</groupId>
+  		<artifactId>bildverwaltung.container.impl</artifactId>
+  		<version>${project.version}</version>
+  		<scope>runtime</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>prog3.torvald</groupId>
+  		<artifactId>bildverwaltung.factory.impl</artifactId>
+  		<version>${project.version}</version>
+  		<scope>runtime</scope>
+  	</dependency>
   </dependencies>
 </project>
