--- a/Bildverwaltung/bildverwaltung.factory.impl/pom.xml
+++ b/Bildverwaltung/bildverwaltung.factory.impl/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>prog3.torvald</groupId>
 		<artifactId>bildverwaltung</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>bildverwaltung.factory.impl</artifactId>
 	<name>Factory implementations</name>
