--- a/Bildverwaltung/bildverwaltung.facade.api/pom.xml
+++ b/Bildverwaltung/bildverwaltung.facade.api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>prog3.torvald</groupId>
     <artifactId>bildverwaltung</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
   <artifactId>bildverwaltung.facade.api</artifactId>
   <name>Facade API</name>
