--- a/Bildverwaltung/pom.xml
+++ b/Bildverwaltung/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>prog3.torvald</groupId>
 	<artifactId>bildverwaltung</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Bildverwaltung</name>
 	
