--- a/Bildverwaltung/bildverwaltung.gui.fx/pom.xml
+++ b/Bildverwaltung/bildverwaltung.gui.fx/pom.xml
@@ -1,39 +1,67 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>prog3.torvald</groupId>
-    <artifactId>bildverwaltung</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>bildverwaltung.gui.fx</artifactId>
-  <name>FX GUI</name>
-  <dependencies>
-  	<dependency>
-  		<groupId>prog3.torvald</groupId>
-  		<artifactId>bildverwaltung.domainmodell</artifactId>
-  		<version>${project.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>prog3.torvald</groupId>
-  		<artifactId>bildverwaltung.facade.api</artifactId>
-  		<version>${project.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>prog3.torvald</groupId>
-  		<artifactId>bildverwaltung.container.api</artifactId>
-  		<version>${project.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>prog3.torvald</groupId>
-  		<artifactId>bildverwaltung.container.impl</artifactId>
-  		<version>${project.version}</version>
-  		<scope>runtime</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>prog3.torvald</groupId>
-  		<artifactId>bildverwaltung.factory.impl</artifactId>
-  		<version>${project.version}</version>
-  		<scope>runtime</scope>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>prog3.torvald</groupId>
+		<artifactId>bildverwaltung</artifactId>
+		<version>1.1.0-SNAPSHOT</version>
+	</parent>
+	<artifactId>bildverwaltung.gui.fx</artifactId>
+	<name>FX GUI</name>
+	<dependencies>
+		<dependency>
+			<groupId>prog3.torvald</groupId>
+			<artifactId>bildverwaltung.domainmodell</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>prog3.torvald</groupId>
+			<artifactId>bildverwaltung.facade.api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>prog3.torvald</groupId>
+			<artifactId>bildverwaltung.container.api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>prog3.torvald</groupId>
+			<artifactId>bildverwaltung.container.impl</artifactId>
+			<version>${project.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>prog3.torvald</groupId>
+			<artifactId>bildverwaltung.factory.impl</artifactId>
+			<version>${project.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+						<finalName>Bildverwaltung-${project.version}</finalName>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>bildverwaltung.gui.fx.masterview.BildverwaltungRunner</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
