--- a/Bildverwaltung/bildverwaltung.dao.impl/pom.xml
+++ b/Bildverwaltung/bildverwaltung.dao.impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>prog3.torvald</groupId>
     <artifactId>bildverwaltung</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
   </parent>
   <artifactId>bildverwaltung.dao.impl</artifactId>
   <name>Dao Impl</name>
