--- a/Bildverwaltung/bildverwaltung.gui.fx/pom.xml
+++ b/Bildverwaltung/bildverwaltung.gui.fx/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>prog3.torvald</groupId>
 		<artifactId>bildverwaltung</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.1.0</version>
 	</parent>
 	<artifactId>bildverwaltung.gui.fx</artifactId>
 	<name>FX GUI</name>
